--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
-@import url('https://font.googlepis.com/css2?family=Poppins:wght@400;600;900&display=swap');
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,13 +12,12 @@ body {
 }
 
 .container {
-   width: 100%;
-   min-height:  10vh;
-   background-color: #F2E8C6; 
-
+    width: 100%;
+    min-height: 10vh;
+    background-color: #F2E8C6; 
 }
 
-nav{
+nav {
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -30,13 +30,12 @@ nav{
     display: flex;
     font-size: 40px;
     font-weight: 800;
-    color:#952323;
-    letter-weight: 3px;
+    color: #952323;
     cursor: pointer;
     text-transform: uppercase;
 }
 
-b{
+b {
     font-size: 70px;
     color: #A73121;
 }
@@ -48,27 +47,25 @@ b{
 .navItems li {
     list-style: none;
     margin: 0 15px;
-   
 }
 
 .navItems li a {
-   font-size: 25px;
-   color:#DAD4B5;
-   letter-spacing: 3px;
-   text-decoration: none;
-   text-transform: capitalize;
+    font-size: 25px;
+    color: #DAD4B5;
+    letter-spacing: 3px;
+    text-decoration: none;
+    text-transform: capitalize;
 }
 
 .navItems li:hover a,
-.links a:hover
-{
-    color:#952323;
+.links a:hover {
+    color: #952323;
 }
 
-.links a{
+.links a {
     font-size: 30px;
-    color:#DAD4B5;
-    marhin: 25px 10px;
+    color: #DAD4B5;
+    margin: 25px 10px; /* Perbaiki dari "marhin" ke "margin" */
 }
 
 .wrapper {
@@ -78,95 +75,100 @@ b{
     justify-content: center;
     align-items: center;
     padding: 0 10%;
+    position: relative; /* Tambahkan posisi relatif untuk ::before dan ::after */
     overflow: hidden;
 }
-.wrapper::before
-{
+
+.wrapper::before {
     position: absolute;
     content: '';
-    height:200px;
+    height: 200px;
     width: 200px;
     border-radius: 50%;
     left: 35%;
     top: 12%;
-    background: linear-gradient(45deg, #952323, black,);
+    background: linear-gradient(45deg, #952323, black);
     animation: object1 6s linear infinite;
 }
-.wrapper::after
-{
+
+.wrapper::after {
     position: absolute;
     content: '';
-    height:600px;
+    height: 600px;
     width: 600px;
     border-radius: 50%;
     left: -12%;
     top: 40%;
-    background: linear-gradient(45deg, #952323, black,);
+    background: linear-gradient(45deg, #952323, black);
     animation: object2 6s linear infinite;
 }
-@keyframes object1{
-    50%{
+
+@keyframes object1 {
+    50% {
         left: -13%;
         top: 40%;
     }
-
 }
-@keyframes object2{
-    50%{
+
+@keyframes object2 {
+    50% {
         left: 35%;
         top: 10%;
     }
-
 }
 
-.cols{
+.cols {
     width: 50%;
 }
-.cols0{
+
+.cols0 {
     width: 60%;
     z-index: 5;
 }
 
-.topline{
+.topline {
     display: block;
-    position:relative;
+    position: relative;
     font-size: 35px;
     letter-spacing: 5px;
     color: #DAD4B5;
 }
 
-.topline:after{
+.topline:after {
     position: absolute;
     content: '';
     height: 4px;
-    width:45px;
+    width: 45px;
     bottom: 10px;
     background-color: #952323;
 }
 
-h1{
-    displayL block;
+h1 {
+    display: block; /* Perbaiki dari "displayL" ke "display" */
     font-size: 7em;
-    font-weight:900;
+    font-weight: 900;
     color: #DAD4B5;
 }
 
-.multiText{
-    color:#952323;
+.multiText {
+    color: #952323;
     text-transform: capitalize;
 }
-p{
-    display:block;
-    width:90%;
-    font-size:1.2em;
-    color:#A73121;
+
+p {
+    display: block;
+    width: 90%;
+    font-size: 1.2em;
+    color: #A73121;
 }
-.btns{
-    width:100%;
+
+.btns {
+    width: 100%;
     position: relative;
     left: 150px;
 }
-button{
+
+button {
     outline: none;
     border: none;
     cursor: pointer;
@@ -180,46 +182,52 @@ button{
     text-transform: capitalize;
     box-shadow: 0 15px 10px rgba(0,0,0,0.4);
 }
-button:hover{
+
+button:hover {
     background-color: #A73121;
 }
-.imgbox{
+
+.imgbox {
     position: relative;
     width: 100%;
     height: 100%;
 }
-.imgbox img{
-    position: relative;
+
+.imgbox img {
+    position: absolute; /* Ganti dari relative ke absolute */
     height: 100%;
     width: calc(130% - 80px);
     top: -100px;
-    righht: 50px;
+    right: 50px; /* Perbaiki dari "righht" ke "right" */
     transform: rotateY(180deg);
     animation: animateUser 4s linear infinite;
 }
-@keyframes animateUser{
-    0%{
+
+@keyframes animateUser {
+    0% {
         transform: rotateY(180deg);
     }
-    50%{
+    50% {
         right: 30px;
         top: -90px;
     }
 }
-.imgbox #splash{
+
+.imgbox #splash {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); rotate(-35deg);
+    transform: translate(-50%, -50%) rotate(-35deg); /* Tambahkan "rotate" dalam transform */
     width: 160%;
     filter: saturate(200%);
     animation: animate 4s linear infinite;
 }
-@keyframes animate{
-    0%{
+
+@keyframes animate {
+    0% {
         transform: rotateY(180deg);
     }
-    50%{
+    50% {
         top: 48%;
         left: 52%;
         width: 156%;
